# Mosaic

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG.rst  COPYING.rst  Dockerfile  MANIFEST.in  README.rst  appveyor.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-tests.yml
Mosaic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mosaic/: __main__.py  about.py  configuration.py  defaults.py  information.py  library.py  media_information.py  metadata.py  player.py  settings.toml  utilities.py
mosaic/tests/: test_metadata.py  test_player.py
player/: configuration.py  mosaic.py  settings.toml
requirements/: test-requirements.txt
tests/: test_metadata.py  test_player.py
